; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_advansys.c_DvcPutScsiQ.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_advansys.c_DvcPutScsiQ.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"DvcPutScsiQ\00", align 1
@IOP_RAM_DATA = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32, i32*, i32)* @DvcPutScsiQ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DvcPutScsiQ(i64 %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i32*, i32** %7, align 8
  %11 = load i32, i32* %8, align 4
  %12 = mul nsw i32 2, %11
  %13 = call i32 @ASC_DBG_PRT_HEX(i32 2, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32* %10, i32 %12)
  %14 = load i64, i64* %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @AscSetChipLramAddr(i64 %14, i32 %15)
  store i32 0, i32* %9, align 4
  br label %17

17:                                               ; preds = %47, %4
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* %8, align 4
  %20 = mul nsw i32 2, %19
  %21 = icmp slt i32 %18, %20
  br i1 %21, label %22, label %50

22:                                               ; preds = %17
  %23 = load i32, i32* %9, align 4
  %24 = icmp eq i32 %23, 4
  br i1 %24, label %28, label %25

25:                                               ; preds = %22
  %26 = load i32, i32* %9, align 4
  %27 = icmp eq i32 %26, 20
  br i1 %27, label %28, label %29

28:                                               ; preds = %25, %22
  br label %47

29:                                               ; preds = %25
  %30 = load i64, i64* %5, align 8
  %31 = load i64, i64* @IOP_RAM_DATA, align 8
  %32 = add nsw i64 %30, %31
  %33 = load i32*, i32** %7, align 8
  %34 = load i32, i32* %9, align 4
  %35 = add nsw i32 %34, 1
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %33, i64 %36
  %38 = load i32, i32* %37, align 4
  %39 = shl i32 %38, 8
  %40 = load i32*, i32** %7, align 8
  %41 = load i32, i32* %9, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i32, i32* %40, i64 %42
  %44 = load i32, i32* %43, align 4
  %45 = or i32 %39, %44
  %46 = call i32 @outpw(i64 %32, i32 %45)
  br label %47

47:                                               ; preds = %29, %28
  %48 = load i32, i32* %9, align 4
  %49 = add nsw i32 %48, 2
  store i32 %49, i32* %9, align 4
  br label %17

50:                                               ; preds = %17
  ret void
}

declare dso_local i32 @ASC_DBG_PRT_HEX(i32, i8*, i32*, i32) #1

declare dso_local i32 @AscSetChipLramAddr(i64, i32) #1

declare dso_local i32 @outpw(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
